--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "firebase": "^11.3.1",
+    "google-auth-library": "^9.15.1",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -36,6 +37,6 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.5.2",
     "tailwindcss": "^4.0.6",
-    "vite": "^5.0.8"
+    "vite": "^6.2.5"
   }
 }
