Add Vercel configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,13 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "*.html", "use": "@vercel/static" },
-    { "src": "js/*.js", "use": "@vercel/static" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/index.html" },
-    { "src": "/js/(.*)", "dest": "/js/$1" },
-    { "src": "/favicon.ico", "dest": "/public/favicon.ico" }
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "devCommand": "npm run dev",
+  "installCommand": "npm install",
+  "framework": null,
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
   ]
 }
